# mai-os-3-sem

./: .clang-format  CMakeLists.txt
cmake/: AddTask.cmake
src/lab-1/: CMakeLists.txt
src/lab-1/client/: CMakeLists.txt  main.c
src/lab-1/server/: CMakeLists.txt  main.c
src/lab-2/: CMakeLists.txt  column_split.cpp  column_split.h  main.cpp  posix_buf.h  row_split.cpp  row_split.h
src/lab-3/: CMakeLists.txt
src/lab-3/client/: CMakeLists.txt  main.cpp
src/lab-3/server/: CMakeLists.txt  main.cpp
src/lab-3/shared/: lab.h
src/lab-4/: CMakeLists.txt
src/lab-4/alloc-1/: CMakeLists.txt  alloc.c
src/lab-4/alloc-2/: CMakeLists.txt  alloc.c
src/lab-4/example/: CMakeLists.txt  fallback.c  fallback.h  main.c
src/lab-4/shared/: alloc.h
src/lib/: bootleg_stdio.c  bootleg_stdio.h  posix_buf.cpp  posix_buf.h
